force-app/main/default/objects/WBS_Item__c/WBS_Item__c.object-meta.xml
<CustomObject>
    <description>Work breakdown structure item. Supports multi-level hierarchy via self-referencing lookup.</description>
    <label>WBS Item</label>
    <nameField>
        <label>WBS Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WBS Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>