force-app/main/default/objects/WBS_Item__c/fields/Actual_Finish__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish__c</fullName>
    <label>Actual Finish</label>
    <description>Auto-set when progress on this task reaches 100%, cleared if it drops back below. Rolls up to summary tasks as the latest child actual finish once all children are complete.</description>
    <type>Date</type>
</CustomField>