force-app/main/default/objects/WBS_Item__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <label>Actual Start</label>
    <description>Auto-set the first time progress on this task rises above 0%. Rolls up to summary tasks as the earliest child actual start.</description>
    <type>Date</type>
</CustomField>