force-app/main/default/objects/WBS_Item__c/fields/Early_Finish__c.field-meta.xml
<CustomField>
    <fullName>Early_Finish__c</fullName>
    <label>Early Finish</label>
    <type>Date</type>
</CustomField>