force-app/main/default/objects/WBS_Item__c/fields/Early_Start__c.field-meta.xml
<CustomField>
    <fullName>Early_Start__c</fullName>
    <label>Early Start</label>
    <type>Date</type>
</CustomField>