force-app/main/default/objects/WBS_Item__c/fields/Float_Days__c.field-meta.xml
<CustomField>
    <fullName>Float_Days__c</fullName>
    <label>Float (Days)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>