force-app/main/default/objects/WBS_Item__c/fields/Is_Critical__c.field-meta.xml
<CustomField>
    <fullName>Is_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Critical</label>
    <type>Checkbox</type>
</CustomField>