force-app/main/default/objects/WBS_Item__c/fields/Lag_Days__c.field-meta.xml
<CustomField>
    <fullName>Lag_Days__c</fullName>
    <label>Lag (Days)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>