force-app/main/default/objects/WBS_Item__c/fields/Late_Finish__c.field-meta.xml
<CustomField>
    <fullName>Late_Finish__c</fullName>
    <label>Late Finish</label>
    <type>Date</type>
</CustomField>