force-app/main/default/objects/WBS_Item__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>