force-app/main/default/objects/WBS_Item__c/fields/Parent_WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_WBS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Child WBS Items</relationshipLabel>
    <relationshipName>Child_WBS_Items</relationshipName>
    <type>Lookup</type>
</CustomField>