force-app/main/default/objects/WBS_Item__c/fields/Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Predecessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predecessor</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Successors</relationshipLabel>
    <relationshipName>Successors</relationshipName>
    <type>Lookup</type>
</CustomField>