force-app/main/default/objects/WBS_Item__c/fields/WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>WBS_Code__c</fullName>
    <label>WBS Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>